// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text that describes all changes to be made",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "Run the command in the background. Returns immediately with a job id. Use the \`background\` tool to manage it. DO NOT sleep, poll, or block on background work.",
      "type": "boolean",
    },
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "id": {
      "description": "Optional short job id, e.g. 'bg1'. Must match ^[A-Za-z0-9_-]+$. Auto-generated if omitted. Rejected if the id is already in use or its log still exists on disk.",
      "type": "string",
    },
    "notify": {
      "description": "When background=true, notify the agent automatically when the command finishes (default true). Set false for a long-running managed job (e.g. a dev server) you will control via the \`background\` tool. Ignored when background is false.",
      "type": "boolean",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "The working directory to run the command in. Defaults to the current directory. Use this instead of 'cd' commands.",
      "type": "string",
    },
  },
  "required": [
    "command",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "appendFile": {
      "description": "Append newText at the end of the file (appendFile strategy)",
      "type": "boolean",
    },
    "apply": {
      "anyOf": [
        {
          "type": "boolean",
        },
        {
          "enum": [
            "if-clean",
          ],
          "type": "string",
        },
      ],
      "description": "Bulk pathway only: true = apply (fail hard on conflicts), false = dry-run plan only (never writes or asks), 'if-clean' (default) = ask once with the full diff and apply when zero conflicts, else return the plan.",
    },
    "delete": {
      "description": "With startLine+endLine: remove the range instead of replacing it (no newText)",
      "type": "boolean",
    },
    "edits": {
      "description": "Batch of edits applied atomically: [{line,newText,oldText?}], [{startLine,endLine,newText?,oldText?,delete?}], or [{oldString,newString}]. Every op is validated against the file as read, overlaps are rejected, and ops apply against original coordinates so earlier edits never shift later targets. Single-file only — for multi-file/bulk work use the patchText bulk pathway.",
      "items": {
        "anyOf": [
          {
            "properties": {
              "line": {
                "description": "1-based line to replace",
                "exclusiveMinimum": 0,
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "newText": {
                "description": "Replacement text for the line",
                "type": "string",
              },
              "oldText": {
                "type": "string",
              },
            },
            "required": [
              "line",
              "newText",
            ],
            "type": "object",
          },
          {
            "properties": {
              "delete": {
                "type": "boolean",
              },
              "endLine": {
                "description": "Range replace end (1-based, inclusive)",
                "exclusiveMinimum": 0,
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "newText": {
                "type": "string",
              },
              "oldText": {
                "type": "string",
              },
              "startLine": {
                "description": "Range replace start (1-based, inclusive)",
                "exclusiveMinimum": 0,
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
            },
            "required": [
              "startLine",
              "endLine",
            ],
            "type": "object",
          },
          {
            "properties": {
              "newString": {
                "description": "The replacement text",
                "type": "string",
              },
              "oldString": {
                "description": "The exact text to replace (must be unique)",
                "type": "string",
              },
            },
            "required": [
              "oldString",
              "newString",
            ],
            "type": "object",
          },
        ],
      },
      "type": "array",
    },
    "endLine": {
      "description": "Range replace end (1-based, inclusive)",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute path to the file to modify (alias: file_path)",
      "type": "string",
    },
    "file_path": {
      "description": "Alias for filePath",
      "type": "string",
    },
    "format": {
      "description": "Bulk pathway only: patch format hint. 'auto' detects from the patch text (default).",
      "enum": [
        "auto",
        "opencode",
        "git",
      ],
      "type": "string",
    },
    "insertAfter": {
      "description": "Deprecated alias for insertAt (identical semantics).",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "insertAt": {
      "description": "Insert newText after this line (0 = prepend before line 1; N > 0 requires oldText confirming line N)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "line": {
      "description": "1-based line to replace with newText (line strategy; oldText with the line's current text is required)",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "nearText": {
      "description": "Context anchor for the nearText strategy: find oldText within ±5 lines of this text and replace it",
      "type": "string",
    },
    "newString": {
      "description": "The text to replace it with (must be different from oldString)",
      "type": "string",
    },
    "newText": {
      "description": "Replacement text for the line/range/insertAt/appendFile/nearText strategies",
      "type": "string",
    },
    "occurrence": {
      "description": "nearText strategy: select the Nth anchor occurrence (1-based) when the anchor repeats",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "oldString": {
      "description": "The text to replace. Single-hunk only — for 2+ locations/files use the patchText bulk pathway instead of looping this tool.",
      "type": "string",
    },
    "oldText": {
      "description": "Verification for line/range/insertAt/nearText strategies: target must contain this text",
      "type": "string",
    },
    "patchText": {
      "description": "Bulk pathway: multi-file / multi-hunk patch text (opencode format or git-style unified diff, auto-detected). Batch ALL known edits into ONE call: one context processing instead of n sequential edit calls, one permission prompt, atomic all-or-nothing apply. Validates every hunk first ('if-clean' default: asks once and applies when zero conflicts, else returns the plan; apply:false = plan only; apply:true = fail on conflicts). Cannot be combined with filePath/oldString/line-style params (paths live INSIDE the patch, relative to the project directory).",
      "type": "string",
    },
    "replaceAll": {
      "description": "Replace all occurrences of oldString (default false)",
      "type": "boolean",
    },
    "runTypecheck": {
      "description": "After applying, run a scoped tsgo/tsc check on this file and append the result (default false). Single-edit pathway only — cannot be combined with patchText.",
      "type": "boolean",
    },
    "showDiff": {
      "description": "Bulk pathway only: include the per-file diffs in the dry-run plan (default false — the plan is intentionally token-lean).",
      "type": "boolean",
    },
    "startLine": {
      "description": "Range replace start (1-based, inclusive). Ranges over 5 lines require oldText spanning the endpoints.",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "custom": {
            "description": "Allow an optional free-form response in addition to any selected choices (default: true)",
            "type": "boolean",
          },
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "action": {
      "description": "read = file window (default). outline = symbol TOC. grep = search this file. around = jump to symbol. tail = last N lines.",
      "enum": [
        "read",
        "outline",
        "grep",
        "around",
        "tail",
      ],
      "type": "string",
    },
    "filePath": {
      "description": "Single-target path. If 2-8 read targets are already known, batch them with filePaths[] or reads[] instead of making separate read calls.",
      "type": "string",
    },
    "filePaths": {
      "anyOf": [
        {
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        {
          "type": "string",
        },
      ],
      "description": "ECONOMY: batch 2-8 known text files into ONE plain-read call when they can share the same offset/limit. Prefer a JSON array. Use reads[] when targets need different windows. Mutually exclusive with filePath/reads.",
    },
    "file_path": {
      "description": "Alias for filePath",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000). Applies to filePath/filePaths; reads[] carries per-target limits.",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed). Past EOF clamps to the last page. Applies to filePath/filePaths; reads[] carries per-target offsets.",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "pattern": {
      "description": "Regex to search inside this file (implies action=grep unless action is set). Prefer this over paging.",
      "type": "string",
    },
    "reads": {
      "description": "ECONOMY: batch up to 8 known text-file windows into ONE plain-read call. Each item has its own filePath and optional offset/limit, so different ranges do not require separate tool calls. Mutually exclusive with filePath/filePaths and top-level offset/limit.",
      "items": {
        "properties": {
          "filePath": {
            "description": "Path for this read window. Relative paths resolve from the project directory.",
            "type": "string",
          },
          "limit": {
            "description": "Maximum lines for this target (default 2000).",
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
          "offset": {
            "description": "1-based start line for this target (default 1).",
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
        },
        "required": [
          "filePath",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "symbol": {
      "description": "Symbol name to jump to (implies action=around unless action is set).",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "Load a skill that is not in this project's skill folders. File or directory (SKILL.md is resolved inside directories). Absolute, ~, or relative to the working directory.",
      "type": "string",
    },
    "mode": {
      "description": "What to do (default: load by name or filePath)",
      "enum": [
        "load",
        "list",
        "search",
      ],
      "type": "string",
    },
    "name": {
      "description": "Skill name from available_skills, OR a filesystem path to a SKILL.md / skill folder (Downloads, another repo, absolute or ~ paths).",
      "type": "string",
    },
    "names": {
      "description": "Load several skills in one call. Each entry may be a registered name or a filesystem path.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "query": {
      "description": "search mode: substring filter across skill names and descriptions",
      "type": "string",
    },
    "tags": {
      "description": "Filter registered skills by tag keywords matched against name/description",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "Run the agent in the background. You will be notified when it completes. DO NOT sleep, poll, or proactively check on its progress",
      "type": "boolean",
    },
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description. Use a distinct description for each parallel subagent.",
      "type": "string",
    },
    "prompt": {
      "description": "A complete standalone task for this subagent, including scope, constraints, and exactly what it must return. It cannot see the parent conversation.",
      "type": "string",
    },
    "subagent_type": {
      "description": "The specialized agent type. For independent work, call this tool multiple times in the same assistant message, once per subagent, so they run in parallel.",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task",
            "type": "string",
          },
          "priority": {
            "description": "Priority level of the task: high, medium, low",
            "type": "string",
          },
          "status": {
            "description": "Current status of the task: pending, in_progress, completed, cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "action": {
      "description": "Action: 'search' (default) runs a query and returns results; 'providers' lists the available search providers, their config status (keyless-ready | needs <ENV_VAR>), and how to enable each.",
      "enum": [
        "search",
        "providers",
      ],
      "type": "string",
    },
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "provider": {
      "description": "Explicitly pin a search provider: exa | parallel | firecrawl | duckduckgo | brave | tavily | searxng. Overrides automatic selection (env override, feature flags, session checksum). Run action:'providers' to see which are usable.",
      "enum": [
        "exa",
        "parallel",
        "firecrawl",
        "duckduckgo",
        "brave",
        "tavily",
        "searxng",
      ],
      "type": "string",
    },
    "query": {
      "description": "Websearch query (required for action 'search')",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
    "runTypecheck": {
      "description": "After writing, run a scoped tsgo/tsc check on this file and append the result (default false)",
      "type": "boolean",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;
